--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.4.1",
     "@testing-library/user-event": "7.2.1",
+    "bootstrap": "^4.4.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-icons": "3.9.0",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "resolve-url-loader": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
