--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-icons": "3.9.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
+    "react-table": "^7.0.0-rc.16",
+    "react-table-6": "^6.11.0",
     "resolve-url-loader": "^3.1.1"
   },
   "scripts": {
