--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mytodo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sayanmondal2098.github.io/mytodos/",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "5.12.1",
     "@fortawesome/free-regular-svg-icons": "5.12.1",
@@ -20,9 +21,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy":"gh-pages -d build",
+    "eject": "react-scripts eject",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy:": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0" 
   }
 }
