--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mytodo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sayanmondal2098.github.io/mytodos/",
+  "homepage": "https://sayanmondal2098.github.io/mytodo/",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "5.12.1",
     "@fortawesome/free-regular-svg-icons": "5.12.1",
