--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
+    "axios": "^0.19.2",
     "bootstrap": "4.4.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
@@ -22,7 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "deploy":"gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "build": "react-scripts build",
     "predeploy": "npm run build",
@@ -44,6 +45,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0" 
+    "gh-pages": "^2.2.0"
   }
 }
